[package]
name = "mothra"
version = "0.1.0"
authors = ["Michael Matuzak <mmatuzak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.91", features = ["derive"] }
paw = "1.0.0"
chrono = { version = "0.4.6", features = ["serde"] }
serde_json = "1.0.39"
dirs = "1.0.5"
